[gd_scene load_steps=8 format=3 uid="uid://d1orh1jn5h7xn"]

[ext_resource type="Script" uid="uid://ddlivb2vgwgj0" path="res://scripts/door.gd" id="1_uvdjg"]
[ext_resource type="Texture2D" uid="uid://c72jburwy2t2d" path="res://assets/sprites/fantasy/Tilesets/House (Outside And Inside) Tileset.png" id="2_83dcw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_la1wf"]
atlas = ExtResource("2_83dcw")
region = Rect2(32, 322, 32, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_18pbm"]
atlas = ExtResource("2_83dcw")
region = Rect2(0, 322, 32, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_q5w8r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_la1wf")
}],
"loop": false,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18pbm")
}],
"loop": false,
"name": &"opened",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvdjg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83dcw"]

[node name="Door" type="Area2D"]
script = ExtResource("1_uvdjg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q5w8r")
animation = &"opened"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_uvdjg")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_83dcw")

[node name="FadeOverlay" type="ColorRect" parent="."]
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1000.0
offset_top = -1000.0
offset_right = 1000.0
offset_bottom = 1000.0
color = Color(0, 0, 0, 0)

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
